--- a/src/app/display-details/display-details.component.html
+++ b/src/app/display-details/display-details.component.html
@@ -1,7 +1,7 @@
 <section class="container mx-auto p-3 text-center">
   <button
     class="bg-sky-500 hover:bg-sky-700 p-2 rounded"
-    (click)="onShowText()"
+    (click)="onClickBtn()"
   >
     Display Details
   </button>
@@ -14,5 +14,11 @@
       quam tenetur quod ea animi quo, qui consequatur at alias doloremque
       pariatur porro quasi autem commodi a nisi fuga vitae vel.
     </p>
+  </div>
+  <div *ngFor="let item of list" class="mb-2 w-24 mx-auto">
+    <p *ngIf="item >= 5; else underFive" class="bg-black text-white rounded">
+      {{ item }}
+    </p>
+    <ng-template #underFive>{{ item }}</ng-template>
   </div>
 </section>
